--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <p id="test">Is it working?</p> 
-        σαν βοήθημα για να ελέγχω κάποια πραγματάκια. -->
+    <!-- <p id="test">Is it working?</p>  -->
 </body>
+
 <script src='./script.js'></script>
 <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
 
