--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <p id="test">Is it working?</p>  -->
+    <!-- <div id="tooltip" class="tooltip">
+        <p id="date">Date:</p>
+        <p id="gdp">b.USD:</p>
+    </div> -->
 </body>
 
 <script src='./script.js'></script>
